# tcp-rpc

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
flake/: shell.nix
logs/: app.log.2025-05-30-15  app.log.2025-05-30-16
macros/: Cargo.toml
macros/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
