[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.98"
bincode = "2.0.1"
futures = "0.3.31"
json5 = "0.4.1"
lazy_static = "1.5.0"
regex = "1.11.1"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
macros = { path = "../macros" }
protocol = { path = "../protocol" }
async-trait = "0.1.88"
